# ctest_gtest_example

./: CMakeLists.txt  README.md  db_connection.h  my_database_app.h
tests/: gmock_my_database_app.cpp  gtest_map.cpp  test_container.cpp
